add select2 js library as require in composer.json

--- a/composer.json
+++ b/composer.json
@@ -3,5 +3,8 @@
   "type": "drupal-module",
   "description": "Select2 integration for entity reference fields",
   "license": "GPL-2.0",
-  "minimum-stability": "dev"
+  "minimum-stability": "dev",
+  "require": {
+    "select2/select2": "^4.0"
+  }
 }
