--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,5 @@
   "type": "drupal-module",
   "description": "Select2 integration for entity reference fields",
   "license": "GPL-2.0",
-  "minimum-stability": "dev",
-  "require": {
-    "select2/select2": "^4.0"
-  }
+  "minimum-stability": "dev"
 }
